@@ -27,6 +27,10 @@ New Features
   length computations, to avoid skew from documents that don't have the field.
   (Ahmet Arslan via Robert Muir)
 
+* SOLR-7876: The QueryTimeout interface now has a isTimeoutEnabled method
+  that can return false to exit from ExitableDirectoryReader wrapping at
+  the point fields() is called. (yonik)
+
 API Changes
 
 * LUCENE-3312: The API of oal.document was restructured to
